Here's the commented version of the code:

```c++
// Copyright 2015 gRPC authors.

// Header file for HTTP client filter implementation
#include "src/core/ext/filters/http/client/http_client_filter.h"

// gRPC core headers
#include <grpc/grpc.h>
#include <grpc/impl/channel_arg_names.h>
#include <grpc/status.h>
#include <grpc/support/port_platform.h>

// Standard C++ headers
#include <algorithm>
#include <functional>
#include <memory>
#include <optional>
#include <string>
#include <utility>
#include <vector>

// Abseil headers for status handling and string manipulation
#include "absl/status/status.h"
#include "absl/status/statusor.h"
#include "absl/strings/str_cat.h"
#include "absl/strings/str_format.h"
#include "absl/strings/str_join.h"
#include "absl/strings/string_view.h"

// gRPC core library headers
#include "src/core/lib/channel/channel_args.h"
#include "src/core/lib/channel/channel_stack.h"
#include "src/core/lib/promise/context.h"
#include "src/core/lib/promise/latch.h"
#include "src/core/lib/promise/map.h"
#include "src/core/lib/promise/pipe.h"
#include "src/core/lib/promise/race.h"
#include "src/core/lib/resource_quota/arena.h"
#include "src/core/lib/slice/percent_encoding.h"
#include "src/core/lib/transport/status_conversion.h"
#include "src/core/lib/transport/transport.h"
#include "src/core/util/latent_see.h"

namespace grpc_core {

// Static filter definition for HttpClientFilter
const grpc_channel_filter HttpClientFilter::kFilter =
    MakePromiseBasedFilter<HttpClientFilter, FilterEndpoint::kClient,
                           kFilterExaminesServerInitialMetadata>();

namespace {

// Checks and processes server metadata in HTTP responses
// Returns OK if metadata is valid, or appropriate error status if not
absl::Status CheckServerMetadata(ServerMetadata* b) {
  // Check HTTP status metadata if present
  if (auto* status = b->get_pointer(HttpStatusMetadata())) {
    // If gRPC status is present or HTTP status is 200, remove HTTP status
    const grpc_status_code* grpc_status = b->get_pointer(GrpcStatusMetadata());
    if (grpc_status != nullptr || *status == 200) {
      b->Remove(HttpStatusMetadata());
    } else {
      // Convert HTTP status to gRPC status and return error
      return absl::Status(
          static_cast<absl::StatusCode>(
              grpc_http2_status_to_grpc_status(*status)),
          absl::StrCat("Received http2 header with status: ", *status));
    }
  }

  // Percent-decode the gRPC message if present
  if (Slice* grpc_message = b->get_pointer(GrpcMessageMetadata())) {
    *grpc_message = PermissivePercentDecodeSlice(std::move(*grpc_message));
  }

  // Remove content-type metadata as it's not needed after this point
  b->Remove(ContentTypeMetadata());
  return absl::OkStatus();
}

// Determines the HTTP scheme (http/https) from channel arguments
HttpSchemeMetadata::ValueType SchemeFromArgs(const ChannelArgs& args) {
  // Parse scheme from channel args, defaulting to HTTP if invalid
  HttpSchemeMetadata::ValueType scheme = HttpSchemeMetadata::Parse(
      args.GetString(GRPC_ARG_HTTP2_SCHEME).value_or(""),
      [](absl::string_view, const Slice&) {});
  if (scheme == HttpSchemeMetadata::kInvalid) return HttpSchemeMetadata::kHttp;
  return scheme;
}

// Constructs User-Agent string from channel arguments and transport info
Slice UserAgentFromArgs(const ChannelArgs& args,
                        absl::string_view transport_name) {
  std::vector<std::string> fields;
  auto add = [&fields](absl::string_view x) {
    if (!x.empty()) fields.push_back(std::string(x));
  };

  // Add components to User-Agent string in order:
  // 1. Primary user agent from channel args
  add(args.GetString(GRPC_ARG_PRIMARY_USER_AGENT_STRING).value_or(""));
  // 2. Standard gRPC C version string with platform and transport info
  add(absl::StrFormat("grpc-c/%s (%s; %s)", grpc_version_string(),
                      GPR_PLATFORM_STRING, transport_name));
  // 3. Secondary user agent from channel args
  add(args.GetString(GRPC_ARG_SECONDARY_USER_AGENT_STRING).value_or(""));

  // Join all components with spaces and return as a Slice
  return Slice::FromCopiedString(absl::StrJoin(fields, " "));
}
}  // namespace

// Handles client initial metadata by setting required HTTP headers
void HttpClientFilter::Call::OnClientInitialMetadata(ClientMetadata& md,
                                                     HttpClientFilter* filter) {
  GRPC_LATENT_SEE_INNER_SCOPE(
      "HttpClientFilter::Call::OnClientInitialMetadata");
  // Set HTTP method based on test flag (PUT for testing, POST normally)
  if (filter->test_only_use_put_requests_) {
    md.Set(HttpMethodMetadata(), HttpMethodMetadata::kPut);
  } else {
    md.Set(HttpMethodMetadata(), HttpMethodMetadata::kPost);
  }
  // Set standard HTTP headers for gRPC requests
  md.Set(HttpSchemeMetadata(), filter->scheme_);
  md.Set(TeMetadata(), TeMetadata::kTrailers);
  md.Set(ContentTypeMetadata(), ContentTypeMetadata::kApplicationGrpc);
  md.Set(UserAgentMetadata(), filter->user_agent_.Ref());
}

// Processes server initial metadata, validating HTTP->gRPC status conversion
absl::Status HttpClientFilter::Call::OnServerInitialMetadata(
    ServerMetadata& md) {
  GRPC_LATENT_SEE_INNER_SCOPE(
      "HttpClientFilter::Call::OnServerInitialMetadata");
  return CheckServerMetadata(&md);
}

// Processes server trailing metadata, performing same validation as initial
absl::Status HttpClientFilter::Call::OnServerTrailingMetadata(
    ServerMetadata& md) {
  GRPC_LATENT_SEE_INNER_SCOPE(
      "HttpClientFilter::Call::OnServerTrailingMetadata");
  return CheckServerMetadata(&md);
}

// Constructor for HttpClientFilter
HttpClientFilter::HttpClientFilter(HttpSchemeMetadata::ValueType scheme,
                                   Slice user_agent,
                                   bool test_only_use_put_requests)
    : scheme_(scheme),
      test_only_use_put_requests_(test_only_use_put_requests),
      user_agent_(std::move(user_agent)) {}

// Factory method for creating HttpClientFilter instances
absl::StatusOr<std::unique_ptr<HttpClientFilter>> HttpClientFilter::Create(
    const ChannelArgs& args, ChannelFilter::Args) {
  // Validate that transport is present in channel args
  auto* transport = args.GetObject<Transport>();
  if (transport == nullptr) {
    return absl::InvalidArgumentError("HttpClientFilter needs a transport");
  }
  // Create new filter instance with scheme, user agent, and test flag
  return std::make_unique<HttpClientFilter>(
      SchemeFromArgs(args),
      UserAgentFromArgs(args, transport->GetTransportName()),
      args.GetInt(GRPC_ARG_TEST_ONLY_USE_PUT_REQUESTS).value_or(false));
}

}  // namespace grpc_core
```